# jfc-nordvpn_icon

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO
resources/: nordvpn-32.xcf
src/: main.cpp  nordvpn-32-connected.cpp  nordvpn-32-default.cpp  nordvpn-32-disconnected.cpp  nordvpn-32-error.cpp
